[package]
name = "rust_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
